# quickdev16

./: .ditz-config  .gitignore  .gitmodules  README  README.md  done.txt  index.html  list.txt  params.json  project.tmproj  quickdev16.tmproj  sizes.txt  snesram.tmproj  todo.sh  todo.txt
avr/bootloader/: Makefile  avr.mk  bootloader.c  config.h  fuses.txt  interrupts.S  usbconfig.h
avr/usbload/: Makefile  Makefile.test  checksize  command.c  command.h  config.h  crc.c  crc.h  dir.c  (+63 more)
bugs/: issue-032fab33a68ffbeb19f1e9fa4856101996759255.yaml  issue-33e57a7c3ac89afc2e37880441fe0eeec05e2b3f.yaml  issue-6498cae9de5e51829e5dbb6b8fcaa20c7a647aa6.yaml  issue-99ae09d1da472e76501325424bc586f78980199e.yaml  project.yaml
files/: Quickdev16_1.5_sdcard.txt  Quickdev16_Seeedstudio2.6_orderlist.ods  Quickdev16_Seeedstudio2.6_parts_2.6_reichelt_CSD.ods  Quickdev16_ascii_banner.txt  Quickdev16_label.odt  Quickdev16_label_rund.odt
patch/: fa2_win32_compile_hack.patch  ucon64_quickdev16.patch
poc/ftdi_romdump/libftdi-0.7/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.in  libftdi-config  libftdi-config.in  libftdi.pc  libftdi.pc.in  libftdi.spec  libtool
poc/ftdi_romdump/libftdi-0.7/src/: Makefile  Makefile.am  Makefile.in  ftdi.c  ftdi.h
pyusb/: pyusb.c  pyusb.sln
roms/: anime.smc  arkanoid.smc  bank01.smc  bank02.smc  bank03.smc  bank04.smc  bank05.smc  bank06.smc  bank07.smc  bankhi.smc  banklo.smc  dezaemon.smc  dump256.smc  dump512.smc  eric.smc  hungry.smc  kirby.smc  kungfu.smc  mrdo.smc  qd16boot02_half.smc  qd16boot_ver01.smc  qd16boot_ver02.smc  regdump_2100_21BF.smc  soundtest1.smc  soundtest2.smc  spacei.smc  supert.smc  turrican.smc  vortex.smc  vram2.smc
scripts/: b.py  check_rle.py  conv_fastlz.py  conv_rle.py  conv_zip.py  conv_zip_test.py  crc_xmodem.py  deflate.sh  dev_server.py  link_webpy.sh  query_romsize.py  rom.py  rom_analyse.sql  rom_inject.py  rom_pattern_fill.py  roms.sqlite3  roms_cleanup.sqlite3  sinegen.py  zip2raw.rb
(+1117 files in other folders)
